# belitsoft-test-task

./: .gitignore  README.md  docker-compose.yml  index.html  pyproject.toml  robot_dashboard.html  robot_results.db
.github/workflows/: ci.yml
docker/: Dockerfile.tests
resources/: api_keywords.robot  variables.robot
tests/dynamic_data/: base64_tests.robot  bytes_tests.robot  delay_tests.robot  drip_tests.robot  links_tests.robot  range_tests.robot  stream_bytes_tests.robot  stream_tests.robot  uuid_tests.robot
tests/request_inspection/: headers_tests.robot  ip_tests.robot  user_agent_tests.robot
tests/response_formats/: brotli_tests.robot  deflate_tests.robot  deny_tests.robot  encoding_utf8_tests.robot  gzip_tests.robot  html_tests.robot  json_tests.robot  robots_txt_tests.robot  xml_tests.robot
